# GNN-protein-interaction

./: README.md  prediction.ipynb  pyproject.toml
PPI_prediction/: ESM_embedding.py  Ensembl_to_Sequence.py  GCN.py  Interaction_to_Protein.py  ProtBERT_embedding.py  ProtT5_embedding.py  STRING_interaction.py  __init__.py  get_ENSP.py  make_node_edge_graph.py
code/: ESM_embedding.py  Ensembl_to_Sequence.py  Interaction_to_Protein.py  ProtBERT_embedding.py  ProtT5_embedding.py  STRING_interaction.py  get_ENSP.py
